# qa

lab1/: CMakeLists.txt  ExceptionManager.cpp  ExceptionManager.h  IManager.h  Test_lab1.cpp
lab2/: CMakeLists.txt  ConfigLoader.h  ExceptionManager.cpp  ExceptionManager.h  Exceptions.h  Server.h  Test_lab2.cpp
